--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -15,6 +15,15 @@
     font-size: 1.3em;
     text-align: center;
 }
+.card-columns{
+    display: flex;
+    flex-wrap: wrap;
+}
+.card{
+    width: fit-content;
+    max-width: 20%;
+    margin: 10px 20px;
+}
   
   @keyframes spin {
     0% { transform: rotate(0deg); }
