--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -14,6 +14,9 @@
     font-weight: 400;
     font-size: 1.3em;
     text-align: center;
+    button{
+      margin: 5px;
+    }
 }
 .card-columns{
     display: flex;
