--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -27,6 +27,10 @@
     max-width: 20%;
     margin: 10px 20px;
 }
+
+#home-container{
+  margin: 2%;
+}
   
   @keyframes spin {
     0% { transform: rotate(0deg); }
