--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -31,6 +31,14 @@
 #home-container{
   margin: 2%;
 }
+
+.card-footer{
+  button{
+    font-size: 10px;
+    padding: 10px;
+    margin-right: 0px;
+  }
+}
   
   @keyframes spin {
     0% { transform: rotate(0deg); }
